# SqliteViewer

./: Cargo.toml  DataFrameTreeNode.cs  DatabaseResultsViewer.cs  DatabaseTree.cs  DatabaseViewerLayout.cs  Program.cs  SqliteExtensions.cs  SqliteViewer.csproj  SqliteViewer.sln  data.sqlite
sandbox/: testdb.sqlite
src/: cli.rs  main.rs
src/data/: mod.rs  sqlite_database.rs  sqlite_query.rs  sqlite_table.rs
src/tui/: app.rs
src/tui/widgets/: database_state.rs  mod.rs
